--- a/index.html
+++ b/index.html
@@ -1,12 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Project</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;0,700;0,900;1,300&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="./images/favicon-bass.ico" type="image/x-icon">
+  <title>The Bass Paradise</title>
 </head>
+
 <body>
-    
+  <header class="dark-background-color">
+    <a href="./index.html">
+      <figure>
+        <img src="./images/bass-seeklogo.com.svg" alt="Fender's Logo">
+      </figure>
+    </a>
+    <nav>
+      <menu>
+        <li>
+          <a class="header-link-text" href="./index.html">Home</a>
+        </li>
+        <li>
+          <a class="header-link-text" href="./pages/acoustic-page.html">Acoustic Bass</a>
+        </li>
+        <li>
+          <a class="header-link-text" href="./pages/electric-page.html">Electric Bass</a>
+        </li>
+      </menu>
+    </nav>
+  </header>
+  <main>
+    <article class="hero dark-background-color">
+      <section>
+        <h1 class="hero-main-text">The Bass Paradise</h1>
+        <p class="hero-secondary-text">Here you will find the most beautiful bass guitars. <br>Get delighted, enjoy your
+          view!</p>
+        <a class="header-link-text" href="">Sign up</a>
+      </section>
+      <figure>
+        <img src="./images/bass-hero.jpeg"
+          alt="Image of Bass collection">
+      </figure>
+    </article>
+    <article class="information">
+      <h2 class="header-information-text">Four types of pleasure</h2>
+      <section>
+        <figure>
+          <img src="./images/acoustic-bass.jpeg" alt="Image of Fender Acoustic Bass">
+          <figcaption class="hero-secondary-text">Acoustic bass for lovers of umplugged.</figcaption>
+        </figure>
+        <figure>
+          <img src="./images/precision-bass.webp" alt="Image of Fender Precision Bass">
+          <figcaption class="hero-secondary-text">Precision bass for rock lovers.</figcaption>
+        </figure>
+        <figure>
+          <img src="./images/jazz-bass.webp" alt="Image of Fender Jazz Bass">
+          <figcaption class="hero-secondary-text">Jazz bass for lovers of a different sound.</figcaption>
+        </figure>
+        <figure>
+          <img src="./images/musicman-bass.webp" alt="Image of Musicman Bass">
+          <figcaption class="hero-secondary-text">Musicman bass for rock and adventure.</figcaption>
+        </figure>
+      </section>
+    </article>
+  </main>
+
 </body>
+
 </html>
