--- a/index.html
+++ b/index.html
@@ -69,7 +69,21 @@
         </figure>
       </section>
     </article>
+    <blockquote class="quote-section" cite="https://www.riffandroll.com/frases-de-musicos-de-rock/">
+      <q class="quote-text">Music is synonymous with freedom, to play what you want and how you want, as long as it is good and has passion, that music be the food of love</q>
+      <p>-Kurt D. Cobain</p>
+    </blockquote>
+    <aside class="call-to-action">
+      <section>
+        <p class="hero-main-text">Be part of this paradise!</p>
+        <p class="hero-secondary-text">Enjoy exclusive content and offers!</p>
+      </section>
+      <a class="cta-btn" href="">Sign up</a>
+    </aside>
   </main>
+  <footer class="dark-background-color">
+    <p class="hero-secondary-text">Copyright &#169;</p>
+  </footer>
 
 </body>
 
