--- a/pages/acoustic-page.html
+++ b/pages/acoustic-page.html
@@ -1,12 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acoustic Bass</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;0,700;0,900;1,300&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="../style.css">
+  <link rel="icon" href="../images/favicon-bass.ico" type="image/x-icon">
+  <title>Acoustic Bass</title>
 </head>
 <body>
-    
+  <header class="dark-background-color">
+    <a href="../index.html">
+      <figure>
+        <img src="../images/bass-seeklogo.com.svg" alt="Fender's Logo">
+      </figure>
+    </a>
+    <nav>
+      <menu>
+        <li>
+          <a class="header-link-text" href="../index.html">Home</a>
+        </li>
+        <li>
+          <a class="header-link-text" href="./acoustic-page.html">Acoustic Bass</a>
+        </li>
+        <li>
+          <a class="header-link-text" href="./electric-page.html">Electric Bass</a>
+        </li>
+      </menu>
+    </nav>
+  </header>
+  <main>
+    <article class="hero dark-background-color">
+      <section>
+        <h1 class="hero-main-text">The Acoustic Bass</h1>
+        <p class="hero-secondary-text">Here you will find the most beautiful acoustic basses. <br>Get delighted, enjoy
+          your
+          view!</p>
+        <a class="header-link-text" href="">Sign up</a>
+      </section>
+      <figure>
+        <img
+          src="../images/acoustic-img/acoustic-bass-hero.webp"
+          alt="Image of Acoustic Bass">
+      </figure>
+    </article>
+    <article class="information">
+      <h2 class="header-information-text">Choose your pleasure</h2>
+      <section>
+        <figure>
+          <img src="../images/acoustic-img/acoustic-1.jpeg"
+            alt="Image of Acoustic Bass">
+          <figcaption class="hero-secondary-text">Dark acoustic bass for adventurers.</figcaption>
+        </figure>
+        <figure>
+          <img
+            src="../images/acoustic-img/acoustic-2.webp"
+            alt="Image of Acoustic Bass">
+          <figcaption class="hero-secondary-text">Left handed acoustic bass.</figcaption>
+        </figure>
+        <figure>
+          <img
+            src="../images/acoustic-img/acoustic-3.webp"
+            alt="Image of Acoustic Bass">
+          <figcaption class="hero-secondary-text">Acoustic bass for classical lovers.</figcaption>
+        </figure>
+        <figure>
+          <img src="../images/acoustic-img/acoustic-4.jpeg"
+            alt="Image of Acoustic Bass">
+          <figcaption class="hero-secondary-text">Acoustic bass in neutral tone.</figcaption>
+        </figure>
+      </section>
+    </article>
+    <blockquote class="quote-section" cite="https://www.brainyquote.com/quotes/jim_james_885003?src=t_acoustic">
+      <q class="quote-text">Once all the power goes out, there will still be human beings standing together around a
+        campfire, playing acoustic guitars.</q>
+      <p>-Jim James</p>
+    </blockquote>
+    <aside class="call-to-action">
+      <section>
+        <p class="hero-main-text">Be part of this paradise!</p>
+        <p class="hero-secondary-text">Enjoy exclusive content and offers!</p>
+      </section>
+      <a class="cta-btn" href="">Sign up</a>
+    </aside>
+  </main>
+  <footer class="dark-background-color">
+    <p class="hero-secondary-text">Copyright &#169;</p>
+  </footer>
 </body>
 </html>
