--- a/pages/electric-page.html
+++ b/pages/electric-page.html
@@ -1,12 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Electric Bass</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;0,700;0,900;1,300&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="../style.css">
+  <link rel="icon" href="../images/favicon-bass.ico" type="image/x-icon">
+  <title>Electric Bass</title>
 </head>
 <body>
-    
+  <header class="dark-background-color">
+    <a href="../index.html">
+      <figure>
+        <img src="../images/bass-seeklogo.com.svg" alt="Fender's Logo">
+      </figure>
+    </a>
+    <nav>
+      <menu>
+        <li>
+          <a class="header-link-text" href="../index.html">Home</a>
+        </li>
+        <li>
+          <a class="header-link-text" href="./acoustic-page.html">Acoustic Bass</a>
+        </li>
+        <li>
+          <a class="header-link-text" href="./electric-page.html">Electric Bass</a>
+        </li>
+      </menu>
+    </nav>
+  </header>
+  <main>
+    <article class="hero dark-background-color">
+      <section>
+        <h1 class="hero-main-text">The Electric Bass</h1>
+        <p class="hero-secondary-text">Here you will find the most beautiful electric basses. <br>Get delighted,
+          enjoy your
+          view!</p>
+        <a class="header-link-text" href="">Sign up</a>
+      </section>
+      <figure>
+        <img
+          src="../images/electric-img/electric-bass-hero.jpeg"
+          alt="Image of Electric Bass Player">
+      </figure>
+    </article>
+    <article class="information">
+      <h2 class="header-information-text">Choose your pleasure</h2>
+      <section>
+        <figure>
+          <img src="../images/electric-img/electric-bass-1.png"
+            alt="Image of Electric Precision Bass">
+          <figcaption class="hero-secondary-text">Precision bass for rock lovers.</figcaption>
+        </figure>
+        <figure>
+          <img
+            src="../images/electric-img/electric-bass-2.jpeg"
+            alt="Image of Electric Wood Bass">
+          <figcaption class="hero-secondary-text">Electric bass in wood tone like nature.</figcaption>
+        </figure>
+        <figure>
+          <img src="../images/electric-img/electric-bass-3.jpeg"
+            alt="Image of Fender Jazz Bass">
+          <figcaption class="hero-secondary-text">Jazz bass for lovers of a different sound.</figcaption>
+        </figure>
+        <figure>
+          <img src="../images/electric-img/electric-bass-4.jpeg" 
+            alt="Image of Electric Dark Brown Bass">
+          <figcaption class="hero-secondary-text">Dark brown bass for rock and adventure.</figcaption>
+        </figure>
+      </section>
+    </article>
+    <blockquote class="quote-section" cite="https://www.riffandroll.com/frases-de-musicos-de-rock/">
+      <q class="quote-text">The bass, no matter what kind of music you’re playing, it just enhances the sound and makes
+        everything sound more beautiful and full. When the bass stops, the bottom kind of drops out of everything.</q>
+      <p>-Charlie Haden</p>
+    </blockquote>
+    <aside class="call-to-action">
+      <section>
+        <p class="hero-main-text">Be part of this paradise!</p>
+        <p class="hero-secondary-text">Enjoy exclusive content and offers!</p>
+      </section>
+      <a class="cta-btn" href="">Sign up</a>
+    </aside>
+  </main>
+  <footer class="dark-background-color">
+    <p class="hero-secondary-text">Copyright &#169;</p>
+  </footer>
 </body>
 </html>
