--- a/pages/acoustic-page.html
+++ b/pages/acoustic-page.html
@@ -89,6 +89,19 @@
     </aside>
   </main>
   <footer class="dark-background-color">
+    <nav>
+      <menu>
+        <li>
+          <a class="header-link-text" href="../index.html">Home</a>
+        </li>
+        <li>
+          <a class="header-link-text" href="./acoustic-page.html">Acoustic Bass</a>
+        </li>
+        <li>
+          <a class="header-link-text" href="./electric-page.html">Electric Bass</a>
+        </li>
+      </menu>
+    </nav>
     <p class="hero-secondary-text">Copyright &#169;</p>
   </footer>
 </body>
